# test_codex

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md
.devcontainer/: devcontainer.json
llc_sweeper/: .gitignore  DEPLOYMENT.md  README.md  pyproject.toml  reproduce_solver.py  requirements.txt  streamlit_app.py
llc_sweeper/notebooks/: P2_demo.ipynb
llc_sweeper/src/llc_sweeper/: __init__.py  cli.py  equations.py  models.py  plotting.py  sweeper.py  validation.py
llc_sweeper/src/llc_sweeper.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
llc_sweeper/src/llc_sweeper/magnetics/: openmagnetics_adapter.py
llc_sweeper/tests/: conftest.py  test_equations.py  test_magnetics.py  test_span.py  test_sweeper.py
